--- a/JsonQL.Demos/JsonQL.Demos.csproj
+++ b/JsonQL.Demos/JsonQL.Demos.csproj
@@ -52,6 +52,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\MyGitHubProjects\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />
+	  <ProjectReference Include="..\..\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net.csproj" />
 	  <ProjectReference Include="..\JsonQL.Diagnostics\JsonQL.Diagnostics.csproj" />
 	  <ProjectReference Include="..\JsonQL\JsonQL.csproj" />
 	</ItemGroup>
