--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -406,6 +406,14 @@
 		<PackageReference Include="NUnit" Version="3.14.0" />
 		<PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+		<PackageReference Include="TestsSharedLibrary" Version="1.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!--<ProjectReference Include="..\..\..\MyGitHubProjects\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />
+	  <ProjectReference Include="..\..\..\MyGitHubProjects\TestsSharedLibrary\TestsSharedLibrary.csproj" />-->
+		<ProjectReference Include="..\JsonQL.Diagnostics\JsonQL.Diagnostics.csproj" />
+		<ProjectReference Include="..\JsonQL\JsonQL.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -419,13 +427,6 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="Demo\GlobalSettings.json" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\..\..\MyGitHubProjects\OROptimizer.Shared\OROptimizer.Shared\OROptimizer.Shared.csproj" />
-	  <ProjectReference Include="..\..\..\MyGitHubProjects\TestsSharedLibrary\TestsSharedLibrary.csproj" />
-	  <ProjectReference Include="..\JsonQL.Diagnostics\JsonQL.Diagnostics.csproj" />
-	  <ProjectReference Include="..\JsonQL\JsonQL.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
