--- a/JsonQL/JsonQL.csproj
+++ b/JsonQL/JsonQL.csproj
@@ -9,11 +9,12 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="UniversalExpressionParser" Version="1.1.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\MyGitHubProjects\TextParser\TextParser\TextParser.csproj" />
-	  <ProjectReference Include="..\..\..\MyGitHubProjects\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />
+	  <!--<ProjectReference Include="..\..\..\MyGitHubProjects\TextParser\TextParser\TextParser.csproj" />
+	  <ProjectReference Include="..\..\..\MyGitHubProjects\UniversalExpressionParser\UniversalExpressionParser\UniversalExpressionParser.csproj" />-->
 	</ItemGroup>
 
 </Project>
