--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -148,6 +148,8 @@
 		<None Remove="JsonMutators\MergeArray\MultipleArrayIndexes\ExpectedCompiledJson.json" />
 		<None Remove="JsonMutators\MergeArray\MultipleArrayIndexes\JsonFile1.json" />
 		<None Remove="JsonMutators\MergeArray\MultipleArrayIndexes\JsonFile2.json" />
+		<None Remove="Operators\DefaultValue\ExpectedCompiledJson.json" />
+		<None Remove="Operators\DefaultValue\JsonFile1.json" />
 		<None Remove="Operators\IsNotNull\ExpectedCompiledJson.json" />
 		<None Remove="Operators\IsNotNull\JsonFile1.json" />
 		<None Remove="Operators\IsNotNull\JsonFile2.json" />
@@ -316,6 +318,8 @@
 		<EmbeddedResource Include="JsonMutators\MergeArray\MergeCollectionIntoArrayFromCurrentJson\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\MergeArray\MergeCollectionIntoArrayFromParentJson\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="JsonMutators\MergeArray\MultipleArrayIndexes\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Operators\DefaultValue\ExpectedCompiledJson.json" />
+		<EmbeddedResource Include="Operators\DefaultValue\JsonFile1.json" />
 		<EmbeddedResource Include="Operators\IsNotNull\ExpectedCompiledJson.json" />
 		<EmbeddedResource Include="Operators\IsNotNull\JsonFile1.json" />
 		<EmbeddedResource Include="Operators\IsNotNull\JsonFile2.json" />
