--- a/JsonQL.Demos/JsonQL.Demos.csproj
+++ b/JsonQL.Demos/JsonQL.Demos.csproj
@@ -10,6 +10,12 @@
 
 	<ItemGroup>
 	  <None Remove="appsettings.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\FailedAssert\Example.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\FailedAssert\Result.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\InvalidParametersError\Example.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\InvalidParametersError\Result.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\MissingClosingBracesError\Example.json" />
+	  <None Remove="Examples\IJsonCompilerExamples\FailureExamples\MissingClosingBracesError\Result.json" />
 	  <None Remove="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\GlobalSettings.json" />
 	  <None Remove="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\MyServiceSettings.json" />
 	  <None Remove="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\Result.json" />
@@ -22,6 +28,14 @@
 	  <None Remove="Examples\IJsonCompilerExamples\SuccessExamples\Overview\Overview.json" />
 	  <None Remove="Examples\IJsonCompilerExamples\SuccessExamples\Overview\Result.json" />
 	  <None Remove="Examples\IQueryManagerExamples\Companies.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsObject\FailedAssert\Data.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsObject\FailedAssert\Result.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\FailedAssert\Data.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\FailedAssert\Result.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\InvalidParametersError\Data.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\InvalidParametersError\Result.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\MissingClosingBracesError\Data.json" />
+	  <None Remove="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\MissingClosingBracesError\Result.json" />
 	  <None Remove="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsListOfDoubles\Data.json" />
 	  <None Remove="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsListOfDoubles\Result.json" />
 	  <None Remove="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsReadOnlyListOfDoubles\Data.json" />
@@ -46,6 +60,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\FailedAssert\Example.json" />
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\FailedAssert\Result.json" />
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\InvalidParametersError\Example.json" />
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\InvalidParametersError\Result.json" />
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\MissingClosingBracesError\Example.json" />
+		<EmbeddedResource Include="Examples\IJsonCompilerExamples\FailureExamples\MissingClosingBracesError\Result.json" />
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\GlobalSettings.json" />
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\MyServiceSettings.json" />
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\CompiledAppSettings\Result.json" />
@@ -57,6 +77,14 @@
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\Overview\Countries.json" />
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\Overview\Overview.json" />
 		<EmbeddedResource Include="Examples\IJsonCompilerExamples\SuccessExamples\Overview\Result.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsObject\FailedAssert\Data.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsObject\FailedAssert\Result.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\FailedAssert\Data.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\FailedAssert\Result.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\InvalidParametersError\Data.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\InvalidParametersError\Result.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\MissingClosingBracesError\Data.json" />
+		<EmbeddedResource Include="Examples\IQueryManagerExamples\FailureExamples\ResultAsParsedJsonValue\MissingClosingBracesError\Result.json" />
 		<EmbeddedResource Include="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsListOfDoubles\Data.json" />
 		<EmbeddedResource Include="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsListOfDoubles\Result.json" />
 		<EmbeddedResource Include="Examples\IQueryManagerExamples\SuccessExamples\ResultAsObject\SalariesOfAllEmployeesInAllCompaniesAsReadOnlyListOfDoubles\Data.json" />
@@ -97,6 +125,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
+		<PackageReference Include="NUnit" Version="3.14.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -108,8 +137,6 @@
 
 	<ItemGroup>
 	  <Folder Include="Examples\AppSettingsWithJsonQLExpressions\" />
-	  <Folder Include="Examples\IJsonCompilerExamples\FailureExamples\" />
-	  <Folder Include="Examples\IQueryManagerExamples\FailureExamples\" />
 	</ItemGroup>
 
 </Project>
