--- a/JsonQL.Diagnostics/JsonQL.Diagnostics.csproj
+++ b/JsonQL.Diagnostics/JsonQL.Diagnostics.csproj
@@ -9,11 +9,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="OROptimizer.Shared.Log4Net" Version="1.0.0" />
+		<!--<PackageReference Include="OROptimizer.Shared.Log4Net" Version="1.0.0" />-->
+		<ProjectReference Include="..\..\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <!--<ProjectReference Include="..\..\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net\OROptimizer.Shared.Log4Net.csproj" />-->
 	  <ProjectReference Include="..\JsonQL\JsonQL.csproj" />
 	</ItemGroup>
 </Project>
