Added some unit tests

--- a/JsonQL.Tests/JsonQL.Tests.csproj
+++ b/JsonQL.Tests/JsonQL.Tests.csproj
@@ -170,9 +170,28 @@
 		<None Remove="Operators\TypeOfOperator\JsonFile2.json" />
 		<None Remove="QueryManager\ResultAsObject\Data\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsObject\Data\JsonFile2.json" />
-		<None Remove="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOfValueTypeValues_IReadOnlyList_Test_ExpectedResult.json" />
-		<None Remove="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOf_NonNullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
-		<None Remove="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<None Remove="QueryManager\ResultAsObject\ExpectedResults\RECONSIDER_QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_Array_Of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_List_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1_DELETE.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_Array_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_List_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_Array_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_List_of_ReferenceType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_Array_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
+		<None Remove="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_List_Of_ValueType_Items_Test.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile1.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\JsonFile2.json" />
 		<None Remove="QueryManager\ResultAsParsedJsonValue\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
@@ -353,9 +372,28 @@
 		<EmbeddedResource Include="Operators\TypeOfOperator\JsonFile2.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\Data\JsonFile1.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsObject\Data\JsonFile2.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOfValueTypeValues_IReadOnlyList_Test_ExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
-		<EmbeddedResource Include="QueryManager\ResultAsObject\ExpectedResults\QueryCollectionOf_NonNullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ExpectedResults\RECONSIDER_QueryCollectionOf_Nullable_ValueTypeValues_Array_Test_ExpectedResult.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_Array_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableValueTypeItems\ExpectedResults\QueryCollection_For_Nullable_List_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_Array_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_IEnumerable_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNullableReferenceItems\ExpectedResults\QueryCollection_For_Nullable_List_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_Array_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableReferenceItems\ExpectedResults\QueryCollection_For_NonNullable_List_of_ReferenceType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1_DELETE.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\Data\JsonFile1.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_Array_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IEnumerable_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_IReadOnlyList_Of_ValueType_Items_Test.json" />
+		<EmbeddedResource Include="QueryManager\ResultAsObject\ResultAsCollectionOfNonNullableValueTypeItems\ExpectedResults\QueryCollection_For_NonNullable_List_Of_ValueType_Items_Test.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QueryListOfReferenceTypeValuesTestExpectedResult.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QuerySingleReferenceTypeTestExpectedResult.json" />
 		<EmbeddedResource Include="QueryManager\ResultAsParsedJsonValue\ExpectedResults\QuerySingleValueTypeTestExpectedResult.json" />
